# spacebox

./: .gitignore  Cargo.toml  LICENSE  README.md
dev-docs/: ARCHITECTURE.md  DEPENDENCY-LICENSES.md
docs/: Architecture.md  Features.md
src/: config.rs  error.rs  main.rs
src/backend/: dropbox_backend.rs  mod.rs
src/fs/: error.rs  file_hash.rs  mod.rs  scan.rs
