[package]
name = "spacebox"
version = "0.1.0"
authors = ["Joseph Murphy <air.jmurph@gmail.com>"]
license = "MIT"
description = "A community-driven Dropbox client"
readme = "README.md"

[dependencies]
chrono = "0.4"
fern = { version = "0.5", features = ["colored"] }
ignore = "0.4"
log = "0.4"
sha3 = "0.7"
notify = "4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
